Fixed button alignment

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,6 @@
 }
 
 .button{
-    width: 15%;
     height: 5vh;
     border-radius: 20px;
     background: linear-gradient(rgb(55, 52, 52), rgb(7, 121, 243));
